2019-12-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_table.c: Increase allocation by 1 more than Xt in s_table_add_column,
      otherwise the allocation is not being resized.

2019-12-07 Wiley E. Hill <wileyhill@gmail.com>

    * po/nb.po: Update Norwegian Bokmal translations.
    * po/nl.po: Update Dutch translations.
    * po/pl.po: Update Polish translations
    * po/pt.po: Update Portuguese translations.
    * po/pt_BR.po: Update Brazilian Portuguese translations.
    * po/ru.po: Update Russian translations.
    * po/sl.po: Update Slovenian translations.
    * po/sr.po: Update Serbian translations.
    * po/sv.po: Update Swedish translations.

2019-12-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_sheet_data.c: Shorten attribute name string in function arguments.

    * src/s_table.c: Revise s_table_add_column to use pointer to reallocated
      memory, new_table, when initializing records. Consolidate loops in
      s_table_destroy; release the row at the end of the first loop.

    * src/s_toplevel.c: Revise function s_toplevel_add_new_attrib to temporarily
      disable redrawing the sheet using gtk_sheet_freeze and gtk_sheet_thaw.

2019-12-05 Wiley E. Hill <wileyhill@gmail.com>

    * src/globals.c: Include glib.h instead of gattrib.h.

    * gattrib/src/s_table.c: Fix BUG; Revise s_table_add_column to use pointer to
      reallocated memory, new_table, when shifting records.

2019-12-04 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtkitementry.c: Remove reference to GTK+ Team in file header,
      the files were not distributed with GTKK+ nor were the files available at
      ftp://ftp.gtk.org/pub/gtk. Update/revise section header.

2019-12-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_string_list.c: Utilize geda_strdup macro to shorten line lengths, redo
      s_string_list_insert to actually insert a new record into the old list instead
      of recreating an entirely new list.
